--- a/.github/workflows/master_voyager-delta-flyer.yml
+++ b/.github/workflows/master_voyager-delta-flyer.yml
@@ -1,7 +1,7 @@
 # Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 
-name: Build and deploy Python app to Azure Web App - voyager-delta-flyer
+name: Build and deploy Python app to Azure Web App - pranee-web-app
 
 on:
   push:
@@ -30,6 +30,6 @@ jobs:
     - name: 'Deploy to Azure Web App'
       uses: azure/webapps-deploy@v2
       with:
-        app-name: 'voyager-delta-flyer'
+        app-name: 'pranee-web-app'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_2354fa17aa7d4ac2b5f3208a8ad9c00a }}
